--- a/projeto/src/main/resources/application.properties
+++ b/projeto/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.thymeleaf.mode=html
+spring.thymeleaf.cache=false
+spring.mvc.locale-resolver=fixed
+spring.mvc.locale=pt_BR
+
 spring.datasource.url=jdbc:mysql://localhost:3306/sraap?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
